# fastapi-nextjs

./: Jenkinsfile  README.md  compose.yml
backend/mart/: .gitignore  Dockerfile  pyproject.toml
backend/mart/app/: main.py  test_main.py
backend/mart/app/config/: mt_config.py  mt_json_formatter.py  mt_log_handler.py
backend/mart/app/console/: db_cli.py
backend/mart/app/controllers/: inventory.py  login.py  order.py  payment.py  product.py  user.py
backend/mart/app/db/: conn.py
backend/mart/app/db/models/: inventory.py  order.py  payment.py  product.py  user.py
backend/mart/app/db/schemas/: inventory.py  order.py  payment.py  user.py
backend/mart/app/kafka/: kafka_base.py  order_consumer.py
backend/mart/app/proto/: order.proto
backend/mart/app/repositories/: UserRepository.py
backend/mart/app/routes/: routes.py
backend/mart/app/security/: auth.py
backend/mart/tests/: test_logging.py
backend/notifications/: main.py
conf/: entrypoint.sh  rsyslog.conf
